# CameraProjectorMatching

./: CMakeLists.txt  README.md
data/R_Cap-00/: resultmap_0.txt
data/R_Cap-030/: resultmap_30.txt
data/R_Cap-090/: resultmap_90.txt
pattern/: CMakeLists.txt  grayCodePattern.hpp  leopardPattern.hpp  moduloCodePattern.hpp
test/: test_GrayCode.cpp  test_LeopardCode_BruteForce.cpp  test_LeopardCode_LSH.cpp  test_ModuloCode.cpp
utils/: CMakeLists.txt  utils.hpp
